--- a/helm/petclinic/values.yaml
+++ b/helm/petclinic/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: initsixcloud/petclinic
-  tag: latest
+  repository: egulbrand/petclinic
+  tag: 2
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
